Fixed teams not fitting their panel in russian language

--- a/content/panorama/styles/custom_game/loading_screen.css
+++ b/content/panorama/styles/custom_game/loading_screen.css
@@ -114,7 +114,7 @@ Label
     vertical-align: center;
     margin-right: 10px;
     font-size: 24px;
-    width: 80px;
+    width: 100px;
     text-align: center;
     font-weight: bold;
 }
